Mise en place du serveur
 * Déplace les fichiers dans le dossier serveur
 * Corrige les erreurs soulevées par Webstorm dans le app.js
 * Réorganise certains points du fichier app.js

--- a/serveur/package.json
+++ b/serveur/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "tp4",
+  "name": "calendar-js-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Le serveur fournissant l'API de l'application calendrier",
   "main": "app.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "latest",
     "express": "^4.16.4",
