--- a/serveur/package.json
+++ b/serveur/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "moment": "^2.24.0"
   }
 }
