--- a/serveur/package.json
+++ b/serveur/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "body-parser": "latest",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "passport": "^0.4.0",
