--- a/appli/package.json
+++ b/appli/package.json
@@ -14,9 +14,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "moment": "^2.24.0"
+    "@fortawesome/fontawesome-free": "^5.7.2",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.13",
+    "jquery": "^3.3.1",
+    "moment": "^2.24.0",
+    "vue": "^2.6.7",
+    "vue-cookies": "^1.5.12",
+    "vue-full-calendar": "^2.7.0",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
