--- a/serveur/package.json
+++ b/serveur/package.json
@@ -6,7 +6,8 @@
   "main": "app.js",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "latest",
@@ -16,5 +17,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "moment": "^2.24.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
