--- a/appli/package.json
+++ b/appli/package.json
@@ -14,16 +14,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.7.2",
+    "@fortawesome/fontawesome-free": "5.12.0",
     "axios": "0.18.0",
-    "bootstrap": "4.3.1",
-    "bootstrap-vue": "2.0.0-rc.13",
-    "jquery": "3.3.1",
+    "bootstrap": "4.4.1",
+    "bootstrap-vue": "2.2.2",
+    "jquery": "3.4.1",
     "moment": "2.24.0",
-    "vue": "2.6.7",
-    "vue-cookies": "1.5.12",
+    "vue": "2.6.11",
+    "vue-cookies": "1.6.1",
     "vue-full-calendar": "2.7.0",
-    "vue-router": "3.0.2"
+    "vue-router": "3.1.5"
   },
   "devDependencies": {
     "autoprefixer": "7.2.6",
@@ -49,7 +49,7 @@
     "eslint-config-standard": "10.2.1",
     "eslint-friendly-formatter": "3.0.0",
     "eslint-loader": "1.9.0",
-    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-import": "2.20.0",
     "eslint-plugin-node": "5.2.1",
     "eslint-plugin-promise": "3.8.0",
     "eslint-plugin-standard": "3.1.0",
@@ -68,7 +68,7 @@
     "postcss-import": "11.1.0",
     "postcss-loader": "2.1.6",
     "postcss-url": "7.3.2",
-    "rimraf": "2.6.3",
+    "rimraf": "2.7.1",
     "selenium-server": "3.141.59",
     "semver": "5.6.0",
     "shelljs": "0.7.8",
@@ -77,11 +77,11 @@
     "vue-jest": "1.4.0",
     "vue-loader": "13.7.3",
     "vue-style-loader": "3.1.2",
-    "vue-template-compiler": "2.6.7",
+    "vue-template-compiler": "2.6.11",
     "webpack": "3.12.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "4.2.1"
+    "webpack-bundle-analyzer": "2.9.0",
+    "webpack-dev-server": "2.11.5",
+    "webpack-merge": "4.2.2"
   },
   "engines": {
     "node": ">= 6.0.0",
